--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
           java-version: 17
       - uses: gradle/gradle-build-action@v2
         with:
+          gradle-version: release-candidate
           arguments: build
           cache-read-only: ${{ github.repository_owner != 'mawathilde' }}
       - name: Upload artifact
